Basic clean up and comments
Moved sort functions to their own header file, cleaned up some variable
names and output, added a switch statement to control which sort is
chosen, add comments to Merge Sort and all new areas of code.

--- a/Sorting/Sorting.vcxproj
+++ b/Sorting/Sorting.vcxproj
@@ -122,6 +122,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
+    <ClInclude Include="InsertionSort.h" />
+    <ClInclude Include="MergeSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
